# data-driven-shift-left-testing

./: .gitignore  01_preprocessing.ipynb  02_generate_embedding.ipynb  03_role2vec_em.ipynb  04_simulation.ipynb  LICENSE  README.md  pyproject.toml
data/: fixes.csv  reports.csv  tasks.csv
src/: functions.py  ml_models.py  path_mapping.json  phases.txt
