[project]
name = "thesis"
version = "0.1.0"
description = "Code used in data-driven shift-left testing master's thesis"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "karateclub>=1.2.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.11.*",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
]

[tool.uv.sources]
torch-cluster = { index = "pyg-wheels" }
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pyg-wheels"
url = "https://data.pyg.org/whl/torch-2.11.0+cu126.html"
format = "flat"
explicit = true
